Bug 317845 - Snapping: Can no longer move window to occupy full screen width
Summary: Snapping: Can no longer move window to occupy full screen width
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 4.11
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/109...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-04 20:01 UTC by Christoph Feck
Modified: 2013-04-07 12:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2013-04-04 20:01:41 UTC
Commit 395bee6032ca41a1ebf916110ee95aa6056a94ee introduced a feature "all snapping is done towards the client, not the frame".

There is a regression with windows having full width (or height). When they initially opened, they occupy the full space, because the window width matches the screen width. 

When I then later move the window up or down, the new snapping behavior prevents the window from ever getting the same full-width horizontal alignment. There is space either on the left side, or on the right side of the window.

To reproduce:
- open any window
- maximize horizontally only
- check horizontal alignment
- move the window (snapping enabled)
- check horizontal alignment again

Actual result:
- window cannot occupy full screen width any longer
Comment 1 Thomas Lübking 2013-04-04 20:24:17 UTC
The intended strategy is to have the decorations restrict edges on partial maximizations (and tiling), but that needs to happen at least for oxygen.

Nevertheless it will be necessary to catch the special maximization case and set the snap padding to 0 for the resp. dimension(s)
Comment 2 Thomas Lübking 2013-04-07 12:58:46 UTC
Git commit 6e3c701802e8ec9225dacfdffdc4db355457ad91 by Thomas Lübking.
Committed on 04/04/2013 at 22:59.
Pushed by luebking into branch 'master'.

snap maximized windows to border
REVIEW: 109864

M  +4    -4    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/6e3c701802e8ec9225dacfdffdc4db355457ad91