snap maximized windows to border

BUG: 317845
REVIEW: 109864